issue #215: assert jvector flags in K8s ITs; place flags on java cmdline
Test changes
- Add HerdDBKubernetesIT.assertJvectorCompilerDirectivesActive(k3s, podName)
  that proves the JVM in a given pod actually picked up the directives:
    * Command-line evidence: pgrep the java process inside the pod and read
      /proc/<pid>/cmdline. The argv must contain
      --add-modules jdk.incubator.vector and
      -XX:CompileCommandFile=conf/jvector-compiler-directives.
    * Log evidence: read kubelet's on-disk container log files from
      /var/log/pods/.../container/*.log[.gz] inside the K3s container,
      transparently un-gzipping rotated files. The JVM-startup
      "CompileCommand: inline io/github/jbellis/jvector/vector/*"
      lines must be present (5 directives, one per matched class). Reading
      from the kubelet on-disk log chain survives kubelet log rotation,
      which routinely drops the head of the pod log on chatty services
      such as the indexing-service while it retries Zookeeper lookups.
- Wire the helper into HerdDBKubernetesIT.testBasicOperations (server
  pod) and HerdDBVectorKubernetesIT.testClusterModeWithVectorIndexing
  (server + every indexing-service replica).

setenv.sh
- Move the jvector-required flags out of JDK_JAVA_OPTIONS and into
  JAVA_OPTS, appended after the ${JAVA_OPTS:-...} default expansion.
  Reasons:
    * They land directly on the actual `java` argv for service processes
      that pass JAVA_OPTS through (server, indexing-service, file-server,
      bookkeeper) — which is what the new IT assertion checks.
    * They are not picked up by tools that intentionally don't pass
      JAVA_OPTS (herddb-cli.sh, herddb-bench.sh). The CLI doesn't load
      jvector and the extra ~7 lines of JVM-startup noise on stderr
      were corrupting kubectl-exec output capture in the existing K8s
      IT (the SELECT result was getting dropped).
    * They still survive a full-replace user JAVA_OPTS override because
      they are appended